# RealityFusion

./: LICENSE.md  readme.md
3DGSUnityPlugin/: CMakeLists.txt  readme.md
3DGSUnityPlugin/dependencies/CudaRasterizer/: CMakeLists.txt
3DGSUnityPlugin/dependencies/CudaRasterizer/cuda_rasterizer/: forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  unityRenderKernel.cu  unityRenderKernel.h
3DGSUnityPlugin/include/: GaussianView.h  UnityRenderer.h
3DGSUnityPlugin/source/: GaussianView.cpp  UnityRenderer.cpp
RealityFusionUnity/: .gitignore
RealityFusionUnity/Assets/3DGaussian/Materials/: 3DGSLeftEye.mat  3DGSLeftPlane.mat  3DGSOcclusion.mat  3DGSRightEye.mat  3DGSRightPlane.mat  ImageEffectTest.mat  ZEDCustomLeftFrame.mat  ZEDCustomRightFrame.mat
RealityFusionUnity/Assets/3DGaussian/Scripts/: GaussianCameraBlit.cs  GaussianDrawing.cs  GaussianLocomotion.cs  GaussianObject.cs  GaussianRFRenderPlugin.cs  GaussianRFRenderer.cs  GaussianRendererImagePlane.cs
RealityFusionUnity/Assets/3DGaussian/Shaders/: 3DGSBasic.shader  3DGSOcclusion.shader  3DGSQuad.shader  EnvironmentOcclusion.cginc  TestImageEffect.shader  ZEDEgocentricPlane.shader
RealityFusionUnity/Assets/CustomZED/: Custom_ZED_Stereo_Rig.prefab  MatrixUtils.cs  ZEDCustomPointCloudManager.cs  ZEDCustomStereoRenderer.cs
RealityFusionUnity/Assets/CustomZED/Editor/: ZEDCustomPointCloudManagerEditor.cs
RealityFusionUnity/Assets/Demos/: 01_3DGSVR_Demo.unity
RealityFusionUnity/Assets/MixedRealityToolkit.Generated/CustomProfiles/: 3DGSControllerVisualizationProfile.asset  NERFUnityCameraProfile.asset  NERFUnityMRTKInput.asset
RealityFusionUnity/Assets/Resources/: ROSConnectionPrefab.prefab
RealityFusionUnity/Assets/Robots/turtlebot3/: turtlebot3_burger.urdf
RealityFusionUnity/Assets/Robots/turtlebot3/Materials/: blue.mat  brown.mat  green.mat  grey.mat  orange.mat  red.mat  white.mat
RealityFusionUnity/Assets/Robots/turtlebot3/Prefabs/: turtlebot3_burger_goal_indicator_with_constraint.prefab  turtlebot3_burger_mesh_only.prefab  turtlebot3_burger_urdf.prefab
RealityFusionUnity/Assets/Robots/turtlebot3/Scripts/Camera/: EgocentricView.cs  ExocentricFollower.cs
RealityFusionUnity/Assets/Robots/turtlebot3/Scripts/Locomotion/: LocomotionManager.cs  TurtlebotConfig.cs  TurtlebotControlSimulation.cs  TurtlebotGoToNavigation.cs  TurtlebotLocomotionController.cs  TurtlebotPoseTracker.cs
RealityFusionUnity/Assets/Robots/turtlebot3/UI/: LocomotioUIManager.cs
RealityFusionUnity/Assets/Robots/turtlebot3/Visualization/: TurtlebotLidarTracker.cs  TurtlebotOccupanceMapTracker.cs  TurtlebotOdomTracker.cs  TurtlebotPointCloudTransformManager.cs
RealityFusionUnity/Assets/Robots/turtlebot3/Visualization/VisualizationLayout2D/: turtlebot3_basic.json  turtlebot3_nav.json  turtlebot3_nav_sim.json
RealityFusionUnity/Assets/Robots/turtlebot3/turtlebot3_description/meshes/bases/: burger_base.prefab
RealityFusionUnity/Assets/Robots/turtlebot3/turtlebot3_description/meshes/sensors/: lds.prefab
RealityFusionUnity/Assets/Robots/turtlebot3/turtlebot3_description/meshes/wheels/: left_tire.prefab  right_tire.prefab
RealityFusionUnity/Assets/ZED/Examples/Drone Shooter/Resources/Models/Gun/old/Materials/: BlasterShotMat.mat
RealityFusionUnity/Assets/ZED/Examples/Drone Shooter/Scenes/: DroneBattleSettings.lighting
RealityFusionUnity/Assets/ZED/Examples/Planetarium/Resources/Sun/Prefab/Materials/: Sunburst_old.mat
RealityFusionUnity/Assets/ZED/Examples/SkeletonTracking/Scene/: SkeletonDemoSettings.lighting
RealityFusionUnity/Assets/ZED/Examples/SpatialMapping/Scenes/: SpatialMappingSettings.lighting
RealityFusionUnity/Assets/ZED/SDK/Helpers/Resources/Materials/PointCloud/: Mat_ZED_PointCloud.mat
RealityFusionUnity/Assets/ZED/SDK/Helpers/Scripts/Display/: ZEDPointCloudManager.cs
RealityFusionUnity/Assets/ZED/SDK/Helpers/Shaders/: ZED_PointCloud.shader
RealityFusionUnity/Assets/ZED/Tools/Mixed Reality Calibration/Materials/: CrossMat.mat
RealityFusionUnity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
docs/: renderplugin.md  robotSetupGuide.md  rootStartupGuide.md  unity.md
